# CrisisOps-Multi-Agent-SRE-Training-via-OpenEnv

./: .gitattributes  .gitignore  README.md  blog.md
crisisops_env/: Dockerfile  README.md  __init__.py  client.py  env.py  judges.py  models.py  openenv.yaml  pyproject.toml  reference_metrics.csv  rewards.py  scenarios.py  simulator.py  success_rate_comparison.csv  training_metrics.csv  training_metrics_live_l40s.csv  training_summary.json
crisisops_env/server/: Dockerfile  __init__.py  app.py  cockpit.html
notebooks/: crisisops_grpo_training.ipynb  expert_demonstrations.jsonl
scripts/: generate_expert_buffer.py  generate_reference_plots.py  hf_job_entrypoint.sh  launch_hf_job.ps1  manual_walkthrough.py  notebook_smoke_test.py  pull_training_artifacts.py  simulate_training_plots.py  train_crisisops_grpo.py  watch_training_job.py
