[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-crisisops-env"
version = "0.1.0"
description = "CrisisOps: cascading microservice incident response environment for OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "crisisops_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["crisisops_env", "crisisops_env.server"]
package-dir = { "crisisops_env" = ".", "crisisops_env.server" = "server" }
